refactor(knowledge): 重构知识检索模块的数据存储架构
- 将 DataRetriever 改为使用 IDataStore 接口依赖注入
- 移除硬编码的具体实现类引用，改用 @Qualifier 注解区分不同 store
- 新增 BaseStoreImpl 抽象基类提取通用检索逻辑
- 在检索时统一处理非活跃段落的排除逻辑
- 优化 CompositeStoreImpl 的并发检索和结果合并策略
- 改进 FullTextStoreImpl 的 MongoDB 文本搜索性能
- 修复 PgVectorEmbeddingStoreImpl 的缓存机制和去重排序逻辑
- 删除不再需要的 isActive 状态更新方法
- 统一各 store 实现的参数校验和异常处理机制